--- a/css/style.css
+++ b/css/style.css
@@ -136,10 +136,11 @@
 	float: left;
 	border: 3px solid rgb(63, 63, 63);
 	border-radius: 50%;
-	margin-right: 30px;
+	margin: 18px 30px 0 0;
 }
 
 .details {
+	position: relative;
 	width: 70%;
 	float: left;
 }
@@ -322,7 +323,7 @@
 
 .add-cart {
 	float: left;
-	margin-top: 28px;
+	margin-bottom: 20px;
 	width: 400px;
 	display: block;
 	padding: 7px 15px 8px;
@@ -363,30 +364,32 @@
 }
 
 .random {
-  margin: 28px 0 0 110px;
-  font: bold 20px Arial,sans-serif;
-  color: rgba(0, 0, 0, 0.8);
-  text-shadow: 0 0.1em 0 rgba(255, 255, 255, 0.5);
-  display: inline-block;
-  outline: none;
-  cursor: pointer;
-  padding: 0.4em 2em 0.5em;
-  -moz-border-radius: 0.3em;
-  -webkit-border-radius: 0.3em;
-  border-radius: 0.3em;
-  border: 1px solid;
-  border-color: #bbbbbb #a2a2a2 #888888;
-  background-color: #eee;
-  background-image: -moz-linear-gradient(#eeeeee, #d4d4d4);
-  background-image: -webkit-linear-gradient(#eeeeee, #d4d4d4);
-  background-image: linear-gradient(#eeeeee, #d4d4d4);
-  -moz-box-shadow: 0 0.1em 0.5em rgba(0, 0, 0, 0.1), 0 0.1em 0.2em rgba(0, 0, 0, 0.3), 0 -0.1em 0.07em rgba(0, 0, 0, 0.3) inset, 0 0.1em 0.07em rgba(255, 255, 255, 0.2) inset;
-  -webkit-box-shadow: 0 0.1em 0.5em rgba(0, 0, 0, 0.1), 0 0.1em 0.2em rgba(0, 0, 0, 0.3), 0 -0.1em 0.07em rgba(0, 0, 0, 0.3) inset, 0 0.1em 0.07em rgba(255, 255, 255, 0.2) inset;
-  box-shadow: 0 0.1em 0.5em rgba(0, 0, 0, 0.1), 0 0.1em 0.2em rgba(0, 0, 0, 0.3), 0 -0.1em 0.07em rgba(0, 0, 0, 0.3) inset, 0 0.1em 0.07em rgba(255, 255, 255, 0.2) inset;
-  -moz-transition: all 100ms;
-  -o-transition: all 100ms;
-  -webkit-transition: all 100ms;
-  transition: all 100ms;
+	 position: absolute;
+	 bottom: 0;
+	 margin-bottom: 20px;
+	 font: bold 20px Arial,sans-serif;
+	 color: rgba(0, 0, 0, 0.8);
+	 text-shadow: 0 0.1em 0 rgba(255, 255, 255, 0.5);
+	 display: inline-block;
+	 outline: none;
+	 cursor: pointer;
+	 padding: 0.4em 2em 0.5em;
+	 -moz-border-radius: 0.3em;
+	 -webkit-border-radius: 0.3em;
+	 border-radius: 0.3em;
+	 border: 1px solid;
+	 border-color: #bbbbbb #a2a2a2 #888888;
+	 background-color: #eee;
+	 background-image: -moz-linear-gradient(#eeeeee, #d4d4d4);
+	 background-image: -webkit-linear-gradient(#eeeeee, #d4d4d4);
+	 background-image: linear-gradient(#eeeeee, #d4d4d4);
+	 -moz-box-shadow: 0 0.1em 0.5em rgba(0, 0, 0, 0.1), 0 0.1em 0.2em rgba(0, 0, 0, 0.3), 0 -0.1em 0.07em rgba(0, 0, 0, 0.3) inset, 0 0.1em 0.07em rgba(255, 255, 255, 0.2) inset;
+	 -webkit-box-shadow: 0 0.1em 0.5em rgba(0, 0, 0, 0.1), 0 0.1em 0.2em rgba(0, 0, 0, 0.3), 0 -0.1em 0.07em rgba(0, 0, 0, 0.3) inset, 0 0.1em 0.07em rgba(255, 255, 255, 0.2) inset;
+	 box-shadow: 0 0.1em 0.5em rgba(0, 0, 0, 0.1), 0 0.1em 0.2em rgba(0, 0, 0, 0.3), 0 -0.1em 0.07em rgba(0, 0, 0, 0.3) inset, 0 0.1em 0.07em rgba(255, 255, 255, 0.2) inset;
+	 -moz-transition: all 100ms;
+	 -o-transition: all 100ms;
+	 -webkit-transition: all 100ms;
+	 transition: all 100ms;
 }
 .random:hover {
   -moz-box-shadow: 0 0.1em 0.5em rgba(0, 0, 0, 0.4), 0 0.1em 0.2em rgba(0, 0, 0, 0.4), 0 -0.1em 0.07em rgba(0, 0, 0, 0.3) inset, 0 0.1em 0.07em rgba(255, 255, 255, 0.2) inset;
